[metadata]
name = "validation_sdk"
summary = "基于flask的校验器扩展"
author = "陈子坤76039"
author-email = 陈子坤76039@sangfor.com
home-page = https://www.sangfor.com
classifier =
    Environment :: PHOENIX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
[files]
packages = validations

[global]
setup-hooks = pbr.hooks.setup_hook
